Init-Container/02-MariaDB-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-srv
spec:
  selector:
   app: mariadb-app
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
