Init-Container/03-App-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: init-container-srv
spec:
  selector:
   app: init-container-app
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
